test/corpus/text.txt
====================================
Valid curly brackets combination inside text block
====================================
{{ if condition }}
    }}
    {}
    }{
    }
    {
    }}}
{{ end }}
---
(source_file
  (if_action
    (statement
      (pipeline
        (function_call
          (identifier))))
    (text)
    (statement)))

====================================
Invalid curly brackets combination inside text block
====================================
{{ if condition }}
    {{
{{ end }}
---
(source_file
  (if_action
    (statement
      (pipeline
        (function_call
          (identifier))))
    (text)
    (statement
      (ERROR))))

====================================
Normal text
====================================
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
---
(source_file
  (text))
